Измнение структуры словоря из приложения

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,20 @@
-/.idea/
 /Archiv/
 /search_db/
 /temp_const/
-/to_exe/
 /venv/
 /Инструкци/
-/log_files/
 /Инструкци/
 /notepad/
 __pycache__
-CopyAssembly
-CopyDrinage
 /Инструкция
 /specification
-log_files_small
+/log_files_small
+/log_files
 _temp
 src
 *.exe
 *.ini
 *.spec
-_CopyAssembly
+
 build
-/launcher/launcher
+setup
