стилизация CopyAssembly под windows 11

--- a/copy_assembly/config_exe.json
+++ b/copy_assembly/config_exe.json
@@ -1,5 +1,5 @@
 {
   "name_project": "_CopyAssembly",
-  "pyfile": "window_copy_assembly.py",
+  "pyfile": "main_window_copy_assembly.py",
   "ico": "resources\\icon\\CopyAssembly.png"
 }
