Изменение структуры ресурсов для проектов

--- a/projects/copy_assembly/config_exe.json
+++ b/projects/copy_assembly/config_exe.json
@@ -1,5 +1,5 @@
 {
   "name_project": "_CopyAssembly",
   "pyfile": "ca_main.py",
-  "ico": "resources\\icon\\CopyAssembly.png"
+  "ico": "ca_resources\\icon\\CopyAssembly.png"
 }
